[gd_scene load_steps=4 format=3 uid="uid://fn82q8rojkjl"]

[ext_resource type="Texture2D" uid="uid://curyronsmebvd" path="res://Graphics/Gimmicks/Corkscrew.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Gimmicks/CorkscrewLoop.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(64, 16)

[node name="CorkscrewLoop" type="Node2D"]
script = ExtResource("2")

[node name="Corkscrew" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(-96, 0)
texture = ExtResource("1")
hframes = 2

[node name="CorkscrewFG" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(96, 0)
texture = ExtResource("1")
hframes = 2
frame = 1

[node name="EnteranceL" type="Area2D" parent="."]
modulate = Color(0, 0.321569, 1, 1)
position = Vector2(-192, 32)
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnteranceL"]
shape = SubResource("1")

[node name="EnteranceR" type="Area2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(192, 32)
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnteranceR"]
shape = SubResource("1")

[connection signal="body_entered" from="EnteranceL" to="." method="_on_EnteranceL_body_entered"]
[connection signal="body_exited" from="EnteranceL" to="." method="_on_EnteranceL_body_exited"]
[connection signal="body_entered" from="EnteranceR" to="." method="_on_EnteranceR_body_entered"]
[connection signal="body_exited" from="EnteranceR" to="." method="_on_EnteranceR_body_exited"]
